# ams-dual-it

./: README.md  main.py  requirements.txt  setup.cfg  setup.py
amsdualit/: AdminServer.py  ApiServer.py  cli.py
