[metadata]
name = amsdualit
version = attr: amsdualit.__version__
description = integration testing for accountmaster service
long_description = file: README.md
keywords = pytest
license = BSD 3-Clause License
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    attrs==21.4.0
    certifi==2022.6.15
    charset-normalizer==2.1.0
    idna==3.3
    iniconfig==1.1.1
    packaging==21.3
    pluggy==1.0.0
    py==1.11.0
    pyparsing==3.0.9
    pytest==7.1.2
    requests==2.28.1
    tomli==2.0.1
    urllib3==1.26.9

[options.packages.find]
exclude =
    amsdualit.tests*

[options.entry_points]
console_scripts =
    ams-dual-it = main:main

[aliases]
test=pytest
